-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
4.7.3, 5.2.0 Beta1
-
None
-
b9c8073230dfd90962188a24f78d4f4157f9eaad
QSpinBox: It is not possible to start typing with '+' when the range covers positive values. For example if you have:
-20
as the current value and the allowed range is -20 to 20 then it should be possible to select all of the text and type in +20, but this is not possible.
Attached is an example and patch for this.